--- a/monolith/src/main/resources/application.yml
+++ b/monolith/src/main/resources/application.yml
@@ -1,7 +1,8 @@
+# Redis Config
 spring:
-  kafka:
-    consumer:
-      auto-offset-reset: earliest
-      group-id: baeldung
-test:
-  topic: embedded-test-topic
+  cache:
+    type: redis
+
+  redis:
+    host: localhost
+    port: 6379
