--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,15 +75,7 @@ services:
       - "PROXY_ADDRESS_FORWARDING=true"
     depends_on:
       - postgres
-
-#  scraper:
-#    build:
-#      context: ./monolith
-#    restart: always
-#    ports:
-#      - 8080:8080
-#    depends_on:
-#      - redis
+      - redis
 
 networks:
   default:
