--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -26,7 +26,6 @@
     "angular-oauth2-oidc": "^10.0.3",
     "bootstrap": "^4.5.0",
     "rxjs": "~6.6.0",
-    "stylelint": "^13.7.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
@@ -47,6 +46,8 @@
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "^7.0.0",
+    "stylelint": "^13.11.0",
+    "stylelint-config-standard": "^20.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "^3.9.7"
