Link dateCreated and title

--- a/monolith/src/main/resources/application.yml
+++ b/monolith/src/main/resources/application.yml
@@ -23,3 +23,6 @@ spring:
           #issuer-uri: http://localhost:8083/auth/realms/scraper
           jwk-set-uri: http://localhost:9090/auth/realms/scraper/protocol/openid-connect/certs
 
+
+  jackson:
+    date-format: "yyyy-MM-dd'T'HH:mm:ss.SSSX"
